src/test/resources/testinput/parsable/symtab/invalid_coco/sizeAndLength.ocl
/* (c) https://github.com/MontiCore/monticore */
package invariants;

ocl sizeAndLength {
  inv(Set<String> names):
    let
      Set<int> a = {};
      b = Set{n.length() | n in names, i = 0, n.length() > i}
    in
      a.size() < b.size();

  inv(Set<String> names):
    let
      a = {}.size();
      b = Set{n.length() | n in names, i = 0, n.length() > i}
    in
      a < b.size();
}
